roles/zoraah.aws-stack/files/vpc-pub-priv-sub-dual-AZ.template
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  VPC: public and private subnets in two availability zones, a cloudonaut.io
  template
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: VPC Parameters
        Parameters:
          - ClassB
  'AWS::CloudFormation::Designer':
    1cdf4ea7-414d-4073-aba9-c10de162ea8b:
      size:
        width: 60
        height: 60
      position:
        x: 1080
        'y': 90
      z: 1
      embeds: []
    96181d88-8c3c-4328-9a59-b26bf047532a:
      size:
        width: 960
        height: 960
      position:
        x: 60
        'y': 90
      z: 1
      embeds:
        - 82198f09-080d-4c9f-95e1-09948fda34a9
        - 74594523-5124-4774-8897-13e8963f5e23
        - 86651341-46d9-4dde-856c-d2a171482fb3
        - cefcda3d-4ab2-4580-96ce-30f217f27c25
        - a1bb0bb1-35e4-4fe7-87c9-897c710d721a
        - dad44217-f023-4c6c-8301-a778ee63ffbe
        - a547a9e8-4ca1-469f-ba1d-676f05400394
        - 30de1c30-595d-40ff-9b99-45ca6dfc2a06
        - c775dd75-c189-455b-b5d6-745aa5a363e0
        - 18c6bba2-4ac4-4a88-92c5-82fdf2745eac
    82198f09-080d-4c9f-95e1-09948fda34a9:
      size:
        width: 330
        height: 240
      position:
        x: 90
        'y': 450
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds:
        - 151d13f9-b14d-4fb6-b62d-30e9d6dd4257
        - 015dbfbc-446a-4b3f-a920-b2961e8db8f6
    151d13f9-b14d-4fb6-b62d-30e9d6dd4257:
      size:
        width: 60
        height: 60
      position:
        x: 120
        'y': 510
      z: 3
      parent: 82198f09-080d-4c9f-95e1-09948fda34a9
      embeds: []
    015dbfbc-446a-4b3f-a920-b2961e8db8f6:
      size:
        width: 60
        height: 60
      position:
        x: 240
        'y': 510
      z: 3
      parent: 82198f09-080d-4c9f-95e1-09948fda34a9
      embeds: []
    74594523-5124-4774-8897-13e8963f5e23:
      size:
        width: 330
        height: 240
      position:
        x: 90
        'y': 150
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds:
        - 86a35adc-c22d-44b2-8a0e-582b2d0feb96
        - aca1e2dd-4542-4e02-ba0a-cefefc7bb84a
    86a35adc-c22d-44b2-8a0e-582b2d0feb96:
      size:
        width: 60
        height: 60
      position:
        x: 120
        'y': 210
      z: 3
      parent: 74594523-5124-4774-8897-13e8963f5e23
      embeds: []
    aca1e2dd-4542-4e02-ba0a-cefefc7bb84a:
      size:
        width: 60
        height: 60
      position:
        x: 240
        'y': 210
      z: 3
      parent: 74594523-5124-4774-8897-13e8963f5e23
      embeds: []
    86651341-46d9-4dde-856c-d2a171482fb3:
      size:
        width: 150
        height: 150
      position:
        x: 510
        'y': 750
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds: []
    cefcda3d-4ab2-4580-96ce-30f217f27c25:
      size:
        width: 240
        height: 240
      position:
        x: 480
        'y': 450
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds:
        - 9015a5c5-4724-4c76-bef3-c890abcd023f
    a1bb0bb1-35e4-4fe7-87c9-897c710d721a:
      size:
        width: 150
        height: 150
      position:
        x: 300
        'y': 750
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds: []
    dad44217-f023-4c6c-8301-a778ee63ffbe:
      size:
        width: 240
        height: 240
      position:
        x: 480
        'y': 150
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds:
        - cd1ae1cb-c18e-4b1a-b13e-ceada07afab0
    a547a9e8-4ca1-469f-ba1d-676f05400394:
      size:
        width: 150
        height: 150
      position:
        x: 90
        'y': 750
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds: []
    d0055fcf-aa7f-4c53-8abd-682b3f61bbf8:
      source:
        id: 82198f09-080d-4c9f-95e1-09948fda34a9
      target:
        id: a547a9e8-4ca1-469f-ba1d-676f05400394
    0115141d-5c20-4be7-8a78-168a020cf1a2:
      source:
        id: 86651341-46d9-4dde-856c-d2a171482fb3
      target:
        id: a547a9e8-4ca1-469f-ba1d-676f05400394
    30de1c30-595d-40ff-9b99-45ca6dfc2a06:
      size:
        width: 150
        height: 150
      position:
        x: 780
        'y': 570
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds: []
    6ec50d2d-69cb-4818-8699-4310521df81d:
      source:
        id: 74594523-5124-4774-8897-13e8963f5e23
      target:
        id: 30de1c30-595d-40ff-9b99-45ca6dfc2a06
    1c8b29a9-c7ed-4813-8baf-3d039b553349:
      source:
        id: cefcda3d-4ab2-4580-96ce-30f217f27c25
      target:
        id: 30de1c30-595d-40ff-9b99-45ca6dfc2a06
    c775dd75-c189-455b-b5d6-745aa5a363e0:
      size:
        width: 150
        height: 150
      position:
        x: 780
        'y': 360
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds: []
    56b8d309-804c-4dfc-bdc4-b34df42b2b42:
      source:
        id: 82198f09-080d-4c9f-95e1-09948fda34a9
      target:
        id: c775dd75-c189-455b-b5d6-745aa5a363e0
    e8333dd6-0905-4ac7-9793-c2855535d353:
      source:
        id: a1bb0bb1-35e4-4fe7-87c9-897c710d721a
      target:
        id: c775dd75-c189-455b-b5d6-745aa5a363e0
    18c6bba2-4ac4-4a88-92c5-82fdf2745eac:
      size:
        width: 150
        height: 150
      position:
        x: 780
        'y': 150
      z: 2
      parent: 96181d88-8c3c-4328-9a59-b26bf047532a
      embeds: []
    9955e3b8-d6d5-4b9e-b591-154bf3874016:
      source:
        id: 74594523-5124-4774-8897-13e8963f5e23
      target:
        id: 18c6bba2-4ac4-4a88-92c5-82fdf2745eac
    3819b25e-8431-47ff-9dfd-75243d3b2224:
      source:
        id: dad44217-f023-4c6c-8301-a778ee63ffbe
      target:
        id: 18c6bba2-4ac4-4a88-92c5-82fdf2745eac
    986c59e6-54ac-45e5-a8f7-6a016e015b15:
      source:
        id: 1cdf4ea7-414d-4073-aba9-c10de162ea8b
      target:
        id: 96181d88-8c3c-4328-9a59-b26bf047532a
    9015a5c5-4724-4c76-bef3-c890abcd023f:
      size:
        width: 60
        height: 60
      position:
        x: 510
        'y': 510
      z: 3
      parent: cefcda3d-4ab2-4580-96ce-30f217f27c25
      embeds: []
      references:
        - 1cdf4ea7-414d-4073-aba9-c10de162ea8b
      dependson:
        - 986c59e6-54ac-45e5-a8f7-6a016e015b15
    cd1ae1cb-c18e-4b1a-b13e-ceada07afab0:
      size:
        width: 60
        height: 60
      position:
        x: 510
        'y': 210
      z: 3
      parent: dad44217-f023-4c6c-8301-a778ee63ffbe
      embeds: []
      references:
        - 1cdf4ea7-414d-4073-aba9-c10de162ea8b
      dependson:
        - 986c59e6-54ac-45e5-a8f7-6a016e015b15
Parameters:
  ClassB:
    Description: Class B of VPC (10.XXX.0.0/16)
    Type: Number
    Default: 0
    ConstraintDescription: 'Must be in the range [0-255]'
    MinValue: 0
    MaxValue: 255
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Sub '10.${ClassB}.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub '10.${ClassB}.0.0/16'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 96181d88-8c3c-4328-9a59-b26bf047532a
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '10.${ClassB}.0.0/16'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 1cdf4ea7-414d-4073-aba9-c10de162ea8b
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 986c59e6-54ac-45e5-a8f7-6a016e015b15
  SubnetAPublic:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      CidrBlock: !Sub '10.${ClassB}.0.0/20'
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: A public
        - Key: Reach
          Value: public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 18c6bba2-4ac4-4a88-92c5-82fdf2745eac
  SubnetAPrivate:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      CidrBlock: !Sub '10.${ClassB}.16.0/20'
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: A private
        - Key: Reach
          Value: private
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c775dd75-c189-455b-b5d6-745aa5a363e0
  SubnetBPublic:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select 
        - 1
        - !GetAZs ''
      CidrBlock: !Sub '10.${ClassB}.32.0/20'
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: B public
        - Key: Reach
          Value: public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 30de1c30-595d-40ff-9b99-45ca6dfc2a06
  SubnetBPrivate:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select 
        - 1
        - !GetAZs ''
      CidrBlock: !Sub '10.${ClassB}.48.0/20'
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: B private
        - Key: Reach
          Value: private
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a547a9e8-4ca1-469f-ba1d-676f05400394
  RouteTablePublic:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: A Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: dad44217-f023-4c6c-8301-a778ee63ffbe
  RouteTablePrivate:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: A Private
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a1bb0bb1-35e4-4fe7-87c9-897c710d721a
  RouteTableBPublic:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: B Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: cefcda3d-4ab2-4580-96ce-30f217f27c25
  RouteTableBPrivate:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: B Private
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 86651341-46d9-4dde-856c-d2a171482fb3
  RouteTableAssociationAPublic:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetAPublic
      RouteTableId: !Ref RouteTablePublic
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3819b25e-8431-47ff-9dfd-75243d3b2224
  RouteTableAssociationAPrivate:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetAPrivate
      RouteTableId: !Ref RouteTablePrivate
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e8333dd6-0905-4ac7-9793-c2855535d353
  RouteTableAssociationBPublic:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetBPublic
      RouteTableId: !Ref RouteTableBPublic
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 1c8b29a9-c7ed-4813-8baf-3d039b553349
  RouteTableAssociationBPrivate:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetBPrivate
      RouteTableId: !Ref RouteTableBPrivate
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 0115141d-5c20-4be7-8a78-168a020cf1a2
  RouteTablePublicInternetRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: cd1ae1cb-c18e-4b1a-b13e-ceada07afab0
  RouteTablePublicBInternetRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTableBPublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9015a5c5-4724-4c76-bef3-c890abcd023f
  NetworkAclPublic:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 74594523-5124-4774-8897-13e8963f5e23
  NetworkAclPrivate:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Private
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 82198f09-080d-4c9f-95e1-09948fda34a9
  SubnetNetworkAclAssociationAPublic:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetAPublic
      NetworkAclId: !Ref NetworkAclPublic
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9955e3b8-d6d5-4b9e-b591-154bf3874016
  SubnetNetworkAclAssociationAPrivate:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetAPrivate
      NetworkAclId: !Ref NetworkAclPrivate
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 56b8d309-804c-4dfc-bdc4-b34df42b2b42
  SubnetNetworkAclAssociationBPublic:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetBPublic
      NetworkAclId: !Ref NetworkAclPublic
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6ec50d2d-69cb-4818-8699-4310521df81d
  SubnetNetworkAclAssociationBPrivate:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetBPrivate
      NetworkAclId: !Ref NetworkAclPrivate
    Metadata:
      'AWS::CloudFormation::Designer':
        id: d0055fcf-aa7f-4c53-8abd-682b3f61bbf8
  NetworkAclEntryInPublicAllowAll:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: aca1e2dd-4542-4e02-ba0a-cefefc7bb84a
  NetworkAclEntryOutPublicAllowAll:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 86a35adc-c22d-44b2-8a0e-582b2d0feb96
  NetworkAclEntryInPrivateAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPrivate
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 015dbfbc-446a-4b3f-a920-b2961e8db8f6
  NetworkAclEntryOutPrivateAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPrivate
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 151d13f9-b14d-4fb6-b62d-30e9d6dd4257
Outputs:
  TemplateID:
    Description: cloudonaut.io template id
    Value: vpc/vpc-2azs
  StackName:
    Description: Stack name
    Value: !Sub '${AWS::StackName}'
  AZs:
    Description: AZs
    Value: 2
    Export:
      Name: !Sub '${AWS::StackName}-AZs'
  AZA:
    Description: AZ of A
    Value: !Select 
      - 0
      - !GetAZs ''
    Export:
      Name: !Sub '${AWS::StackName}-AZA'
  AZB:
    Description: AZ of B
    Value: !Select 
      - 1
      - !GetAZs ''
    Export:
      Name: !Sub '${AWS::StackName}-AZB'
  ClassB:
    Description: Class B.
    Value: !Ref ClassB
    Export:
      Name: !Sub '${AWS::StackName}-ClassB'
  VPC:
    Description: VPC.
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPC'
  SubnetsPublic:
    Description: Subnets public.
    Value: !Join 
      - ','
      - - !Ref SubnetAPublic
        - !Ref SubnetBPublic
    Export:
      Name: !Sub '${AWS::StackName}-SubnetsPublic'
  SubnetsPrivate:
    Description: Subnets private.
    Value: !Join 
      - ','
      - - !Ref SubnetAPrivate
        - !Ref SubnetBPrivate
    Export:
      Name: !Sub '${AWS::StackName}-SubnetsPrivate'
  RouteTablePrivate:
    Description: 'Route table private (deprecated in v4, will be removed in v5).'
    Value: !Ref RouteTablePrivate
    Export:
      Name: !Sub '${AWS::StackName}-RouteTablePrivate'
  RouteTablePublic:
    Description: 'Route table public (deprecated in v4, will be removed in v5).'
    Value: !Ref RouteTablePublic
    Export:
      Name: !Sub '${AWS::StackName}-RouteTablePublic'
  RouteTablesPrivate:
    Description: Route tables private.
    Value: !Join 
      - ','
      - - !Ref RouteTablePrivate
        - !Ref RouteTableBPrivate
    Export:
      Name: !Sub '${AWS::StackName}-RouteTablesPrivate'
  RouteTablesPublic:
    Description: Route tables public.
    Value: !Join 
      - ','
      - - !Ref RouteTablePublic
        - !Ref RouteTableBPublic
    Export:
      Name: !Sub '${AWS::StackName}-RouteTablesPublic'
  SubnetAPublic:
    Description: Subnet A public.
    Value: !Ref SubnetAPublic
    Export:
      Name: !Sub '${AWS::StackName}-SubnetAPublic'
  RouteTableAPublic:
    Description: Route table A public.
    Value: !Ref RouteTablePublic
    Export:
      Name: !Sub '${AWS::StackName}-RouteTableAPublic'
  SubnetAPrivate:
    Description: Subnet A private.
    Value: !Ref SubnetAPrivate
    Export:
      Name: !Sub '${AWS::StackName}-SubnetAPrivate'
  RouteTableAPrivate:
    Description: Route table A private.
    Value: !Ref RouteTablePrivate
    Export:
      Name: !Sub '${AWS::StackName}-RouteTableAPrivate'
  SubnetBPublic:
    Description: Subnet B public.
    Value: !Ref SubnetBPublic
    Export:
      Name: !Sub '${AWS::StackName}-SubnetBPublic'
  RouteTableBPublic:
    Description: Route table B public.
    Value: !Ref RouteTableBPublic
    Export:
      Name: !Sub '${AWS::StackName}-RouteTableBPublic'
  SubnetBPrivate:
    Description: Subnet B private.
    Value: !Ref SubnetBPrivate
    Export:
      Name: !Sub '${AWS::StackName}-SubnetBPrivate'
  RouteTableBPrivate:
    Description: Route table B private.
    Value: !Ref RouteTableBPrivate
    Export:
      Name: !Sub '${AWS::StackName}-RouteTableBPrivate'
